--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,27 +25,27 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: app
+        working-directory: django-helloworld
 
     strategy:
       matrix:
-        node-version: [20.x, 22.x, 24.x]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
-      run: npm ci
-    - name: Install playwright browsers
-      run: npx playwright install --with-deps
-    - name: Run tests
-      run: npm run test
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Run Django tests with pytest
+      run: pytest
 
-  docker-build:
-    needs: unit-tests
-    uses: ./.github/workflows/docker-build.yml
+  # docker-build:
+  #   needs: unit-tests
+  #   uses: ./.github/workflows/docker-build.yml
